<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <drawable name="red">#F00</drawable>

    <string name="app_name">Hydra</string>

    <!-- string for buttons on the dashboard -->

    <!-- Activity titles -->
    <string name="title_news">Nieuws</string>
    <string name="title_calendar">Activiteiten</string>
    <string name="title_info">Info</string>
    <string name="title_menu">Resto Menu</string>
    <string name="title_restomap">Resto Map</string>
    <string name="title_urgent">Urgent.fm</string>
    <string name="title_schamper">Schamper Daily</string>
    <string name="title_preferences">Voorkeuren</string>
    <string name="title_settings_associations_filter">Filter verenigingen</string>
    <string name="title_about">Over</string>
    <string name="title_external_components">Externe componenten</string>
    
    <string name="details">Details</string>
    <string name="search_title">Zoek activiteit&#8230;</string>

    <string name="no_associations_selected">Selecteer ten minste 1 vereniging in de instellingen.</string>
    <string name="no_news_available">Geen nieuws beschikbaar.</string>
    <string name="news_update_failed">Ophalen nieuw nieuws mislukt.</string>
    <string name="activities_updated_failed">Ophalen nieuwe activiteiten mislukt.</string>
    <string name="no_activities_available">Geen activiteiten beschikbaar.</string>

    <!-- Club activity strings -->
    <string name="activity_item_association_title">Door %1s</string>
    <string name="activity_item_date_title">Wanneer</string>
    <string name="activity_item_location_title">Waar</string>
    <string name="activity_item_guests_title">Gasten</string>
    <string name="activity_item_content_title">Info</string>
    <string name="activity_item_more_content_title">Meer info</string>
    <string name="activity_item_title">%1$s %2$s</string>
    <string name="activity_item_time_location">%1$s van %2$s - %3$s</string>

    <!-- Facebook in Calendar -->
    <string name="now">Koppel</string>
    <string name="not_now">Niet nu</string>
    <string name="koppel_text">Koppel Hydra aan Facebook en krijg meer informatie bij de activiteiten. Je kan dit later altijd aanpassen in de voorkeuren.</string>
    <string name="koppel_title">Facebook koppelen</string>

    <!-- Preferences strings -->
    <string name="inappsupport">Feedback</string>
    <string name="pref_filter">Filter</string>
    <string name="pref_filter_activites">Toon alle verenigingen</string>
    <string name="pref_filter_associations_hint">Zoek vereniging&#8230;</string>
    <string name="pref_filter_activities_summary">Selecteer verenigingen om activiteiten en nieuwsberichten te filteren. Berichten die in de kijker staan worden steeds getoond.</string>
    <string name="pref_filter_activities_list">Selectie</string>
    <string name="pref_facebook">Facebook</string>
    <string name="pref_facebook_title">Koppel aan Facebook</string>
    <string name="get_started">Log in op Facebook</string>
    <string name="pref_facebook_summary">Koppel Hydra aan je Facebookaccount en krijg te zien wie er op welke activiteit aanwezig is. Je kan ook meteen je eigen status hieraan aanpassen.</string>
    <string name="no_selection">Geen items gevonden. Selecteer verenigingen in de instellingen of toon alle verenigingen</string>
    
    <string name="com_facebook_loginview_log_out_button">Log Uit</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Ingelogd als: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Ingelogd via Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log uit</string>
    <string name="com_facebook_loginview_cancel_action">Blijf ingelogd</string>
    
    <!-- About strings -->
    <string name="about_text">Hydra werd ontwikkeld door Zeus WPI, de studentenwerkgroep informatica van Universiteit Gent, in opdracht van de Dienst StudentenActiviteiten.</string>
    <string name="about_zeus_button">Meer informatie</string>
    
    <!-- External Components strings -->
    <string name="external_components_intro">Deze app maakt gebruik van de volgende bibliotheken van derden.</string>
    
    <!-- Resto strings -->
    <string name="soup">Soep</string>
    <string name="meat">Vlees &amp; Veggie</string>
    <string name="vegetables">Groenten</string>
    <string name="resto_show_map">Toon restos op kaart</string>
    <string name="resto_about">Over</string>
    <string name="legend">Legende</string>
    <string name="legend_swiping">Je kan het menu voor de volgende dagen bekijken door naar links te swipen.</string>
    <string name="resto_search_label"></string>
    <string name="resto_search_hint">Zoek Resto&#8230;</string>

    <!-- Map stuffz -->
    <string name="maps_opengl_error">Uw apparaat ondersteunt de laatste versie van Google Maps niet.</string>

    <!-- other stuff -->
    <string name="loading">Laden…</string>
    <string name="today">Vandaag</string>
    <string name="tomorrow">Morgen</string>
    <string name="posted_by">%1$s door %2$s</string>
    <string name="posted_by_newline">%1$s\ndoor %2$s</string>
    
    <string name="no_song_info_found">Geen plaat(info)</string>
    <string name="schamper_readmore">Meer lezen? Bezoek Schamper online&#8230;</string>
    <string name="refresh">Vernieuwen</string>
    <string name="btn_info">Info</string>
    
    <!-- Errors -->
    <string name="no_network_title">Netwerk niet beschikbaar.</string>
    <string name="no_network">Sommige onderdelen vereisen een netwerkverbinding en zullen mogelijks niet correct werken.</string>
    <string name="no_schamper_articles">Geen Schamper artikels gevonden.</string>
    <string name="menu_unavailable">Het menu is momenteel niet beschikbaar. Gelieve later opnieuw te proberen.</string>
    <string name="no_restos_found">De lijst met resto\'s kon niet worden opgehaald van de webservice. Gelieve later opnieuw te proberen.</string>

    <string name="schamper_update_failed">Schamper Daily kon niet geladen worden.</string>
    <string name="resto_update_failed">De resto\'s konden niet geladen worden.</string>
    <string name="nowplaying_update_failed">Info over de huidige track kon niet worden opgezocht.</string>
    
    
    <!-- Urgent -->
    <string name="urgent_show_prefix">U LUISTERT NAAR %1$s</string>
    <string name="urgent_vorige_title">vorige:</string>
    <string name="urgent_huidige_title">speelt nu:</string>
    
    
    <string name="attending">Deelnemen</string>
    <string name="maybe">Misschien</string>
    <string name="declined">Afwezig</string>
    <string name="undecided">Onbeslist</string>
    <string name="button_attending">Aanwezig</string>
    <string name="button_maybe">Misschien</string>
    <string name="button_declined">Gaat niet</string>
    <string name="button_undecided">Onbeslist</string>
    
    <!-- API keys -->
    <string name="applicationId">146947948791011</string>
    <string name="maps_api_key">AIzaSyBITAqykoWxmWtIhMHc-SLei2dL2Jpaq8Y</string>
</resources>
