<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="@string/pref_filter" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefFilter"
            android:disableDependentsState="true"
            android:title="@string/pref_filter_activites" 
            android:summary="@string/pref_filter_activities_summary" />
        
        <Preference android:title="@string/pref_filter_activities_list" 
                    android:dependency="prefFilter">
            
            <intent android:action=".settings.AssociationsFilter" />
            
        </Preference>

    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_facebook" >
        
        <be.ugent.zeus.hydra.settings.FacebookWidget android:title="@string/pref_facebook_title"    
                                                     android:summary="@string/pref_facebook_summary" />
            
    </PreferenceCategory>
 
 
</PreferenceScreen>